fix login z-index

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     transform: translate(-50%, -38%);
     box-sizing: border-box;
     padding: 70px 30px;
+    z-index: -1;
 }
 
 .avatar {
